src/scss/main.scss
/* ... */
/* bring the search and user menu a bit more on the left
 * this is the only way I found that works
 * adding row/columns will mess up the left alignment of the navbar
 */
#main-nav {
  background-color: inherit;

  @media (min-width: 992px) {
    height: 43px;
  }

  /* prevent wrap on whitespace for elements of the menu so it doesn't take two lines when screen size is getting small */
  .nav-item {
    white-space: nowrap;
  }
}

/* to make the pie smaller */
.pie-chart-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 360px;
  padding: 5%;
}

/* pure css pie chart based on: https://codepen.io/chriscoyier/pen/RPLqMg */
.pie-chart {
  background: conic-gradient(var(--pie-data));
  border-radius: 50%;
  height: 0;
  padding-right: 20px;
  padding-top: 100%;
  width: 100%;
}

.pie-percent {
  background: var(--bg);
  border-radius: 5px;
  color: var(--white);
  padding: 10px;
  text-align: center;
  text-shadow: 0 0 1px var(--strongest);
}

.fa-2x {
  font-size: 1.6em;
}

/* fix border radius for custom-select. brl = border radius left */
.brl-none {
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
}

/* fix border radius for custom-select. brr = border radius right */
.brr-none {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

/* SCROLL TO TOP OF PAGE BUTTON */
.floating-middle-right {
  position: fixed;
  right: 0.8%;
  top: calc(100vh - 15rem);

  /* make the up arrow white or we can't see it */
  svg {
    color: var(--white);
  }
}

#backToTopButton {
  transition: all 0.5s ease;

  i {
    color: var(--white);
  }
}

#scrollTopBtnAnchor {
  bottom: 0;
  position: absolute;
}
/* END BACK TO TOP BUTTON */

.border-white {
  border: 1px solid var(--mainbackground);
}

/* notifications */
.notification {
  border-top: 1px solid var(--mainbackground);
  color: var(--medium);

  span {
    color: var(--mediumstrong);
  }

  .relative-moment {
    font-size: 80%;
  }
}

.notification[data-ack='0'] {
  background-color: var(--primary);

  span {
    color: var(--mainbackground);
  }
}


/* The switch - the box around the slider */
.switch {
  display: inline-block;
  height: 22px;
  position: relative;
  width: 42px;

  /* Hide default HTML checkbox */
  input {
    height: 0;
    opacity: 0;
    width: 0;
  }

  /* align the slider to the label in ucp */
  &.ucp-align {
    margin-top: 0.5rem;
  }

  &.disabled {
    opacity: 0.7;

    .slider {
      cursor: default;
    }
  }
}

/* The slider */
.slider {
  background-color: var(--secondary);
  border-radius: 34px;
  bottom: 0;
  cursor: pointer;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: 355ms;

  &::before {
    background-color: var(--chrome-fg);
    border-radius: 50%;
    bottom: 2px;
    content: '';
    height: 18px;
    left: 2px;
    position: absolute;
    transition: 355ms;
    width: 18px;
  }
}

input:checked + .slider {
  background-color: var(--primary);
}

input:focus + .slider {
  box-shadow: 0 0 8px var(--primary);
}

input:checked + .slider::before {
  transform: translateX(20px);
}

/* :user-invalid only activates after the user interacted with an input
 * https://developer.mozilla.org/en-US/docs/Web/CSS/:user-invalid
 */
input:user-invalid {
  border: 1px solid var(--dangerred);
  box-shadow: 0 0 8px var(--dangerred);
}

.section-title {
  background-color: var(--firstlevel);
  font-size: 120%;
}

/* PROFILE page */
.counter {
  color: var(--medium);
}

/* see Enums/State */
.state-indicator {
  /* error */
  &[data-state='6'] {
    color: var(--darkred);
  }
  /* processing */
  &[data-state='5'] {
    animation: pulse 2s infinite;
    color: var(--orange);
  }
  /* pending */
  &[data-state='4'] {
    color: var(--mediumstrong);
  }
  /* normal */
  &[data-state='1'] {
    color: var(--green);
  }
}

@keyframes pulse {
  0%,
  100% {
    color: var(--brightorange); /* Bright orange */
  }

  50% {
    color: var(--lessbrightorange); /* Less bright orange */
  }
}

#exclusiveEditModeBtn {
  span {
    height: 1rem;
    line-height: 1rem;
    width: 1.25rem;

    i:first-child {
      top: -1.7px;
    }

    .fa-lock-open {
      left: -2px;
    }

    .fa-lock {
      left: -4px;
    }

    .fa-pen-nib {
      --fa-rotate-angle: 45deg;
      color: var(--primary);
      left: 2px;
      top: 4px;
    }
  }
}

#ketcher-root {
  display: flex;
  flex-direction: column;
  width: 100%;   /* Make the editor fill the entire width */
}

.ketcher-editor-container {
  display: flex;
  /*flex-grow: 1; /* Make the editor grow to fill available space */
  flex: 0 1 620px;
  flex-direction: column;
}

.ketcher-editor-container .editor {
  /*flex-grow: 1; /* Allow the drawing area to take up all remaining space */
  flex: 0 1 620px;
  min-height: 500px; /* Ensure a minimum height */
}

.ketcher-editor-container .toolbar {
  flex-shrink: 0; /* Ensure toolbars do not shrink */
}

#storageDiv {
  details,
  summary {
    margin: 10px 0;
  }
}

/* top right button */
.initials {
  color: var(--secondlevel);
  font-size: 1.5rem;
  font-weight: bold;
}

/* opencloning iframe */
#syc-root {
  height: 87vh;
  width: 100%;

  iframe {
    height: 100%;
    width: 100%;
  }
}

.round-spot {
  border-radius: 50%;
  display: inline-block;
  height: 1em;
  line-height: 1;
  vertical-align: middle;
  width: 1em;
}

.round-spot-ghost {
  border: 1px dashed var(--medium);
}

.table-bordered,
.table-bordered td,
.table-bordered th,
.fc-event {
  border: 1px solid var(--secondary-muted);
}

.calendar-event-hover {
  box-shadow: 5px 4px 4px var(--medium) !important;
}

.calendar-event-disabled {
  opacity: 0.5;
}

.flash:hover {
  background-color: var(--primary);
  transition: background-color 0.1s ease;
}

.color-input {
  min-width: 116px;
}
/* ... */

